# shop-nw-checker

./: .env  .gitignore  README.md  bootstrap.bat  bootstrap.ps1  bootstrap.sh  pyproject.toml
.kiro/specs/ssm-probe-reverse-check/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/store-network-test-automation/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/vlan-ip-logging-and-stability-speedup/: design.md  requirements.md  tasks.md
.kiro/specs/vlan-sequential-test/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/vlan-specific-tests/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/wizard-input-refactor/: design.md  requirements.md  tasks.md
profiles/: default.json
scripts/: test_airtable_e2e.py  test_airtable_e2e_3records.py  test_ssm_probe_e2e.py
src/store_net_test/: __init__.py  main.py  models.py  profile.py  runner.py  wizard.py
src/store_net_test/reporters/: __init__.py  airtable.py  local.py
src/store_net_test/tests/: __init__.py  dns.py  gateway_dns.py  https_check.py  ping.py  ping_output_parser.py  ssm_probe.py  stability.py  whereami.py
src/store_net_test/utils/: network.py  platform.py
tests/: test_gateway_dns.py  test_https_check.py  test_network.py  test_profile.py  test_reporter.py  test_runner.py  test_whereami.py
