[project]
name = "store-net-test"
version = "0.1.0"
description = "店舗ネットワークテスト自動化ツール"
requires-python = ">=3.11"
dependencies = [
    "icmplib>=3.0",
    "dnspython>=2.6",
    "httpx>=0.27",
    "rich>=13.0",
    "questionary>=2.0",
    "boto3>=1.34",
]

[project.scripts]
store-net-test = "store_net_test.main:main"

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/store_net_test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "property: property-based tests",
]
filterwarnings = [
    # TestProfile/TestResult/TestStatusデータクラスのpytest誤認識を抑制
    "ignore::pytest.PytestCollectionWarning",
]
